# adoption_accelerator

./: .dockerignore  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
agents/: __init__.py  config.py  graph.py  llm.py  state.py
agents/guardrails/: __init__.py  fallbacks.py  validators.py
agents/nodes/: __init__.py  aggregator.py  description_writer.py  explainer.py  inference.py  orchestrator.py  recommender.py
agents/observability/: __init__.py  audit.py  metrics.py  tracing.py
agents/prompts/: explainer_system.txt  explainer_user.txt  recommender_system.txt  recommender_user.txt  writer_system.txt  writer_user.txt
agents/tools/: __init__.py  counterfactual_tool.py  explanation_tool.py  feature_tool.py  prediction_tool.py
app/api/: main.py
app/api/middleware/: error_handler.py
app/api/routers/: explore.py  health.py  predict.py  predictions.py
app/api/schemas/: enums.py  requests.py  responses.py
app/api/services/: job_store.py  prediction_service.py
app/streamlit/: api_client.py  app.py  config.py
app/streamlit/components/: description_card.py  explanation_card.py  input_form.py  key_factors.py  loading_states.py  modality_donut.py  pet_card.py  prediction_header.py  probability_chart.py  recommendations.py  sidebar.py
app/streamlit/pages/: explore.py  predict.py  status.py
configs/agents/: graph.yaml  llm.yaml  timeouts.yaml
configs/inference/: serving.yaml
configs/training/: baseline.yaml  tuned.yaml
docker/: api.Dockerfile  streamlit.Dockerfile
docs/: notebooks_specs_part1.md  project_specs.md
notebooks/: 00_project_setup.ipynb  01_data_ingestion.ipynb  02_data_validation.ipynb  03_data_cleaning.ipynb  04_eda_tabular.ipynb  05_eda_text_sentiment.ipynb  07_feature_engineering_tabular.ipynb  08_feature_extraction_text.ipynb  09_feature_extraction_images.ipynb  10_feature_integration.ipynb  11_modeling_baseline.ipynb  12_modeling_tuning.ipynb  14_inference_pipeline_test.ipynb
scripts/: precompute_explore_data.py
src/adoption_accelerator/: __init__.py  config.py
src/adoption_accelerator/data/: __init__.py  cleaning.py  ingestion.py  schemas.py  validation.py
tests/e2e_tests/: __init__.py  run_e2e.py  runner.py  scenarios.py  test_api_schemas.py  validators.py
(+47 files in other folders)
