[project]
name = "adoption-accelerator"
version = "0.1.0"
description = "Exploratory Data Analysis for the PetFinder Adoption Prediction dataset."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Pedro Markovicz" }]

dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "plotly>=5.22",
    "openpyxl>=3.1",
    "kaggle>=1.6",
    "jupyterlab>=4.2",
    "ipykernel>=6.29",
    "pyarrow>=15.0",
    "scipy>=1.12",
    "langdetect>=1.0.9",
    "wordcloud>=1.9.3"
]

[project.urls]
Dataset = "https://www.kaggle.com/competitions/petfinder-adoption-prediction/overview"

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]